[project]
name = "lazy-lidar"
version = "0.1.0"
description = "Lidar Data Walkthrough"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Joel Krauska"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "laspy>=2.5.0",
    "lazrs>=0.6.0",
    "pyproj>=3.6.0",
    "numpy>=1.26.0",
    "open3d>=0.18.0",
    "streamlit>=1.37.0",
    "plotly>=5.24.0",
    "pydeck>=0.9.1",
    "pandas>=2.2.0",
    "pygame>=2.5.0",
    "rasterio>=1.3.0",
    "panda3d>=1.10.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["download_lidar.py"]

